--- a/HAB_STM32/RFM95W_Tx/RFM95W_Tx.ioc
+++ b/HAB_STM32/RFM95W_Tx/RFM95W_Tx.ioc
@@ -16,20 +16,22 @@ Mcu.Name=STM32L412KBUx
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
 Mcu.Pin1=PC15-OSC32_OUT (PC15)
-Mcu.Pin10=PA14 (JTCK/SWCLK)
-Mcu.Pin11=PA15 (JTDI)
-Mcu.Pin12=PB3 (JTDO/TRACESWO)
-Mcu.Pin13=PB5
-Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin10=PA12
+Mcu.Pin11=PA13 (JTMS/SWDIO)
+Mcu.Pin12=PA14 (JTCK/SWCLK)
+Mcu.Pin13=PA15 (JTDI)
+Mcu.Pin14=PB3 (JTDO/TRACESWO)
+Mcu.Pin15=PB6
+Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin2=PA0-CK_IN
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
-Mcu.Pin7=PA11
-Mcu.Pin8=PA12
-Mcu.Pin9=PA13 (JTMS/SWDIO)
-Mcu.PinsNb=15
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA11
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L412KBUx
@@ -37,6 +39,8 @@ MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -49,6 +53,10 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-CK_IN.Signal=RCC_CK_IN
 PA1.Mode=Full_Duplex_Master
 PA1.Signal=SPI1_SCK
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=RFM_INT0
+PA10.Locked=true
+PA10.Signal=GPXTI10
 PA11.Locked=true
 PA11.Mode=Full_Duplex_Master
 PA11.Signal=SPI1_MISO
@@ -79,14 +87,18 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=RFM_RST
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=RFM_INT1
+PA9.Locked=true
+PA9.Signal=GPXTI9
 PB3\ (JTDO/TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO/TRACESWO).GPIO_Label=LD3 [Green]
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=RFM_INT
-PB5.Locked=true
-PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=RFM_INT5
+PB6.Locked=true
+PB6.Signal=GPXTI6
 PC14-OSC32_IN\ (PC14).Locked=true
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
@@ -112,8 +124,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=RFM69_Tx.ioc
-ProjectManager.ProjectName=RFM69_Tx
+ProjectManager.ProjectFileName=RFM95W_Tx.ioc
+ProjectManager.ProjectName=RFM95W_Tx
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -122,7 +134,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
@@ -161,6 +173,12 @@ RCC.USART2Freq_Value=32000000
 RCC.USBFreq_Value=32000000
 RCC.VCOInputFreq_Value=32000000
 RCC.VCOOutputFreq_Value=256000000
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
